--- a/src/main/webapp/WEB-INF/static/html/hotStk.html
+++ b/src/main/webapp/WEB-INF/static/html/hotStk.html
@@ -2,18 +2,18 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>唯群网--库存推广</title>
-    <link rel="stylesheet" href="css/public.css">
-    <link rel="stylesheet" href="css/hotStk.css">
-    <script src="js/jquery-3.2.1.js"></script>
-    <script charset="gb2312" type="text/javascript" src="js/public.js"></script>
-    <script charset="gb2312" type="text/javascript" src="js/hotStk.js"></script>
+    <link rel="stylesheet" href="../css/public.css">
+    <link rel="stylesheet" href="../css/hotStk.css">
+    <script src="../js/jquery-3.2.1.js"></script>
+    <script charset="gb2312" type="text/javascript" src="../js/public.js"></script>
+    <script charset="gb2312" type="text/javascript" src="../js/hotStk.js"></script>
  </head>
 
 <body>
     <div id="header">
         <div id="head">
             <div id="logo">
-                <img src="images/logo.png" alt="">
+                <img src="../images/logo.png" alt="">
             </div>
             <div id="uname" onclick="company()">深圳市模板电子科技有限公司</div>
             <a id="admin" onclick="admin()">后台管理</a>
@@ -41,7 +41,7 @@
 
 <div id="h1_box">
     <div id="h1">
-        <div id="uLogo"><img src="images/elecland.jpg" alt=""/></div>
+        <div id="uLogo"><img src="../images/elecland.jpg" alt=""/></div>
         <div id="cName">深圳市模板电子科技有限公司</div>
         <span class="upload">上传清单</span>
         <span class="upload">下载模板</span>
