--- a/src/main/webapp/WEB-INF/static/html/vendor.html
+++ b/src/main/webapp/WEB-INF/static/html/vendor.html
@@ -3,11 +3,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>唯群网--供应商</title>
-    <link rel="stylesheet" href="css/public.css"  type="text/css"   />
-    <link  href="css/vendor.css"  type="text/css"  rel="stylesheet"  />
-    <script src="js/jquery-3.2.1.js"></script>
-    <script  type="text/javascript" src="js/public.js"></script>
-    <script  type="text/javascript" src="js/vendor.js"></script>
+    <link rel="stylesheet" href="../css/public.css"  type="text/css"   />
+    <link  href="../css/vendor.css"  type="text/css"  rel="stylesheet"  />
+    <script src="../js/jquery-3.2.1.js"></script>
+    <script  type="text/javascript" src="../js/public.js"></script>
+    <script  type="text/javascript" src="../js/vendor.js"></script>
 
 </head>
 
@@ -17,7 +17,7 @@
     <div id="header">
         <div id="head">
             <div id="logo">
-                <img src="images/logo.png" alt="">
+                <img src="../images/logo.png" alt="">
             </div>
             <div id="uname" onclick="company()">深圳市模板电子科技有限公司</div>
             <a id="admin" onclick="admin()">后台管理</a>
