--- a/src/main/webapp/WEB-INF/static/html/company.html
+++ b/src/main/webapp/WEB-INF/static/html/company.html
@@ -2,11 +2,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>维群网--公司详情页</title>
-    <link rel="stylesheet" href="css/public.css">
-    <link rel="stylesheet" href="css/company.css">
-    <script src="js/jquery-3.2.1.js"></script>
-    <script charset="gb2312" type="text/javascript" src="js/public.js"></script>
-    <script charset="gb2312" type="text/javascript" src="js/company.js"></script>
+    <link rel="stylesheet" href="../css/public.css">
+    <link rel="stylesheet" href="../css/company.css">
+    <script src="../js/jquery-3.2.1.js"></script>
+    <script charset="gb2312" type="text/javascript" src="../js/public.js"></script>
+    <script charset="gb2312" type="text/javascript" src="../js/company.js"></script>
  </head>
 
 <body>
@@ -14,7 +14,7 @@
 <div id="header">
     <div id="head">
         <div id="logo">
-            <img src="images/logo.png" alt="">
+            <img src="../images/logo.png" alt="">
         </div>
         <div id="uname" onclick="company()">深圳市模板电子科技有限公司</div>
         <a id="admin" onclick="admin()">后台管理</a>
@@ -46,7 +46,7 @@
             <form action="">
                 <table>
                     <tr>
-                        <td><img src="images/elecland.jpg" alt=""/></td>
+                        <td><img src="../images/elecland.jpg" alt=""/></td>
                         <td class="inputFm1">深圳市模板电子科技有限公司</td>
                     </tr>
                     <tr>
