--- a/src/main/webapp/WEB-INF/static/html/findPrice.html
+++ b/src/main/webapp/WEB-INF/static/html/findPrice.html
@@ -2,11 +2,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>唯群网--查价</title>
-    <link rel="stylesheet" href="css/public.css">
-    <link rel="stylesheet" href="css/findPrice.css">
-    <script src="js/jquery-3.2.1.js"></script>
-    <script charset="gb2312" type="text/javascript" src="js/public.js"></script>
-    <script charset="gb2312" type="text/javascript" src="js/findPrice.js"></script>
+    <link rel="stylesheet" href="../css/public.css">
+    <link rel="stylesheet" href="../css/findPrice.css">
+    <script src="../js/jquery-3.2.1.js"></script>
+    <script charset="gb2312" type="text/javascript" src="../js/public.js"></script>
+    <script charset="gb2312" type="text/javascript" src="../js/findPrice.js"></script>
  </head>
 
 <body>
@@ -14,7 +14,7 @@
     <div id="header">
         <div id="head">
             <div id="logo">
-                <img src="images/logo.png" alt="">
+                <img src="../images/logo.png" alt="">
             </div>
             <div id="uname" onclick="company()">深圳市模板电子科技有限公司</div>
             <a id="admin" onclick="admin()">后台管理</a>
@@ -35,7 +35,7 @@
     </div>
 
     <div id="banner_box">
-        <img id="banner" src="images/banner.jpg" alt="">
+        <img id="banner" src="../images/banner.jpg" alt="">
     </div>
     <div class="box">
         <div id="search">
