--- a/src/main/webapp/WEB-INF/static/html/logon.html
+++ b/src/main/webapp/WEB-INF/static/html/logon.html
@@ -2,11 +2,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>唯群网--登录</title>
-    <link rel="stylesheet" href="css/public.css">
-    <link rel="stylesheet" href="css/logon.css">
-    <script src="js/jquery-3.2.1.js"></script>
-    <script charset="gb2312" type="text/javascript" src="js/public.js"></script>
-    <script charset="gb2312" type="text/javascript" src="js/logon.js"></script>
+    <link rel="stylesheet" href="../css/public.css">
+    <link rel="stylesheet" href="../css/logon.css">
+    <script src="../js/jquery-3.2.1.js"></script>
+    <script charset="gb2312" type="text/javascript" src="../js/public.js"></script>
+    <script charset="gb2312" type="text/javascript" src="../js/logon.js"></script>
  </head>
 
 <body>
@@ -14,7 +14,7 @@
     <div id="header">
         <div id="head">
             <div id="logo">
-                <img src="images/logo.png" alt="">
+                <img src="../images/logo.png" alt="">
             </div>
             <div id="uname" onclick="company()">深圳市模板电子科技有限公司</div>
             <a id="admin" onclick="admin()">后台管理</a>
@@ -37,7 +37,7 @@
     <div id="login_box">
         <div id="login">
            <div id="logPic">
-               <img src="images/logPic.jpg" alt=""/>
+               <img src="../images/logPic.jpg" alt=""/>
            </div>
             <form id="logForm" name="logForm" method="post" action="">
                 <table width="100%" border="0" cellspacing="0" cellpadding="15">
