--- a/src/main/webapp/WEB-INF/static/html/index.html
+++ b/src/main/webapp/WEB-INF/static/html/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>唯群网--首页</title>
-    <link rel="stylesheet" href="css/public.css"  type="text/css"   />
-    <link  href="css/index.css"  type="text/css"  rel="stylesheet"  />
-    <script src="js/jquery-3.2.1.js"></script>
-    <script  type="text/javascript" src="js/public.js"></script>
-    <script  type="text/javascript" src="js/index.js"></script>
+    <link rel="stylesheet" href="/static/css/public.css"  type="text/css"   />
+    <link  href="/static/css/index.css"  type="text/css"  rel="stylesheet"  />
+    <script src="/static/js/jquery-3.2.1.js"></script>
+    <script  type="text/javascript" src="/static/js/public.js"></script>
+    <script  type="text/javascript" src="/static/js/index.js"></script>
 
 </head>
 
@@ -15,11 +15,12 @@
     <div id="header">
         <div id="head">
             <div id="logo">
-                <img src="images/logo.png" alt="">
+                <img src="/static/images/logo.png" alt="">
             </div>
             <div id="uname" onclick="company()">深圳市模板电子科技有限公司</div>
             <a id="admin" onclick="admin()">后台管理</a>
-            <a id="logon" onclick="logon()">登陆</a>
+            <span style="color: red;" th:if="${user!=null}" th:text="'欢迎登录:'+${user.nickname}"></span>
+            <a id="logon" th:if="${user==null}" href="/user/login" >登陆</a>
             <a id="regist" onclick="regist()">注册</a>
             <a id="userInfo" onclick="userInfo()">用户信息</a>
         </div>
@@ -37,7 +38,7 @@
 
 <div id="banner">
     <div id="img">
-        <img src="images/banner.jpg" alt="">
+        <img src="/static/images/banner.jpg" alt="">
     </div>
 
 </div>
@@ -66,237 +67,28 @@
 <div class="box">
     <div id="content">
         <form action="">
-            <table cellspacing="10px">
+            <table border="1" style="text-align: center;width: 100%">
                 <tr>
-                    <td >询价单号</td>
-                    <td >公 司 名 称</td>
-                    <td >规格型号</td>
-                    <td  >品质要求</td>
-                    <td >批次</td>
-                    <td >数量</td>
-                    <td >价格</td>
-                    <td >交期</td>
-                    <td>&nbsp;</td>
+                    <td>询价单号</td>
+                    <td>公 司 名 称</td>
+                    <td>规格型号</td>
+                    <td>品质要求</td>
+                    <td>批次</td>
+                    <td>数量</td>
+                    <td>价格</td>
+                    <td>交期</td>
+                    <td>操作</td>
                 </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
-                </tr>
-                <tr>
-                    <td >I890600001</td>
-                    <td >深圳市模板电子科技有限公司</td>
-                    <td >STM8S003F3P6TR</td>
-                    <td >原装正品</td>
-                    <td >1830+</td>
-                    <td >500000</td>
-                    <td >11.2563</td>
-                    <td >深圳现货</td>
-                    <td  onclick="quote()">报价</td>
+                <tr th:each="Rfq:${pager.datas}">
+                    <td th:text="${Rfq.rfqno}">I890600001</td>
+                    <td th:text="${Rfq.company}">深圳市模板电子科技有限公司</td>
+                    <td th:text="${Rfq.pn}">STM8S003F3P6TR</td>
+                    <td th:text="${Rfq.qlty}">原装正品</td>
+                    <td th:text="${Rfq.qty}+'+'">1830+</td>
+                    <td th:text="${Rfq.qty}">500000</td>
+                    <td th:text="${Rfq.tp}">11.2563</td>
+                    <td th:text="${Rfq.dtime}">深圳现货</td>
+                    <td><button type="button" th:value="${Rfq.rfqno}" onclick="inMfg(this.value)">报价</button></td>
                 </tr>
             </table>
         </form>
@@ -305,18 +97,11 @@
 
 <div class="box">
     <div id="pageCount">
-        <span>首页</span>
-        <span>1</span>
-        <span>2</span>
-        <span>3</span>
-        <span>4</span>
-        <span>5</span>
-        <span>6</span>
-        <span>7</span>
-        <span>8</span>
-        <span>9</span>
-        <span>10</span>
-        <span>末页</span>
+        <a href="/index" th:if="${pager.currentPage>1}">首页</a>
+        <span th:each="i:${#numbers.sequence(pager.currentPage,pager.totalPage,1)}">
+            <a th:href="'/index/'+${i}" th:text="${i}"></a>
+        </span>
+        <a href="/index" th:if="${pager.currentPage>1}">末页</a>
     </div>
 </div>
 
