--- a/src/main/webapp/WEB-INF/static/html/rfq.html
+++ b/src/main/webapp/WEB-INF/static/html/rfq.html
@@ -3,11 +3,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>唯群网--询价</title>
-    <link rel="stylesheet" href="css/public.css">
-    <link rel="stylesheet" href="css/rfq.css">
-    <script src="js/jquery-3.2.1.js"></script>
-    <script charset="gb2312" type="text/javascript" src="js/public.js"></script>
-    <script charset="gb2312" type="text/javascript" src="js/rfq.js"></script>
+    <link rel="stylesheet" href="/static/css/public.css">
+    <link rel="stylesheet" href="/static/css/rfq.css">
+    <script src="/static/js/jquery-3.2.1.js"></script>
+    <script charset="gb2312" type="text/javascript" src="/static/js/public.js"></script>
+    <script charset="gb2312" type="text/javascript" src="/static/js/rfq.js"></script>
  </head>
 
 <body>
@@ -15,7 +15,7 @@
     <div id="header">
         <div id="head">
             <div id="logo">
-                <img src="images/logo.png" alt="">
+                <img src="/static/images/logo.png" alt="">
             </div>
             <div id="uname" onclick="company()">深圳市模板电子科技有限公司</div>
             <a id="admin" onclick="admin()">后台管理</a>
