--- a/src/main/webapp/WEB-INF/static/html/index.html
+++ b/src/main/webapp/WEB-INF/static/html/index.html
@@ -99,7 +99,7 @@
     <div id="pageCount">
         <a href="/index" th:if="${pager.currentPage>1}">首页</a>
         <span th:each="i:${#numbers.sequence(pager.currentPage,pager.totalPage,1)}">
-            <a th:href="'/index/'+${i}" th:text="${i}"></a>
+            <a th:if="${i>pager.currentPage+10&& i<pager.totalPage}" th:href="'/index/'+${i}" th:text="${i}"></a>
         </span>
         <a href="/index" th:if="${pager.currentPage>1}">末页</a>
     </div>
