--- a/src/main/webapp/WEB-INF/static/html/index.html
+++ b/src/main/webapp/WEB-INF/static/html/index.html
@@ -89,7 +89,7 @@
                     <td th:text="${Rfq.qty}">500000</td>
                     <td th:text="${Rfq.tp}">11.2563</td>
                     <td th:text="${Rfq.dtime}">深圳现货</td>
-                    <td th:text="${Rfq.rdate}">2019-04-23</td>
+                    <td th:text="${#dates.format(Rfq.rdate,'yyyy-MM-dd')}">2019-04-23</td>
                     <td><button type="button" th:value="${Rfq.rfqno}" onclick="inMfg(this.value)">报价</button></td>
                 </tr>
             </table>
@@ -100,10 +100,12 @@
 <div class="box">
     <div id="pageCount">
         <a href="/index" th:if="${pager.currentPage>1}">首页</a>
+        <a th:href="${'/index/'+(pager.currentPage-1)}" th:if="${pager.currentPage>1}">上一页</a>
         <span th:each="i:${#numbers.sequence(pager.currentPage,pager.totalPage,1)}">
-            <a th:if="${i>pager.currentPage+10&& i<pager.totalPage}" th:href="'/index/'+${i}" th:text="${i}"></a>
+            <a th:if="${i<pager.currentPage+10&& i<=pager.totalPage}" th:href="'/index/'+${i}" th:text="${i}"></a>
         </span>
-        <a href="/index" th:if="${pager.currentPage>1}">末页</a>
+        <a th:href="${'/index/'+(pager.currentPage+1)}" th:if="${pager.currentPage<pager.totalPage}">下一页</a>
+        <a th:href="${'/index/'+pager.totalPage}" th:if="${pager.currentPage>1}">末页</a>
     </div>
 </div>
 
