修改了static页面

--- a/src/main/webapp/WEB-INF/static/html/addMfg.html
+++ b/src/main/webapp/WEB-INF/static/html/addMfg.html
@@ -34,18 +34,18 @@
     </div>
 </div>
 
-<div id="addPn_box">
-    <div id="addPn">
+<div id="addMfg_box">
+    <div id="addMfg">
         <form id="addForm" action="" method="post" name="addForm">===============添加品牌===============
             <dl>
                 <dd>上传LOGO： <input  type="file"  name="upload" id="upload"/></dd>
-                <dd>英文名称：<input   type="text" /></dd>
-                <dd>中文名称：<input  type="text" /></dd>
+                <dd>英文名称：<input   type="text" required/></dd>
+                <dd>中文名称：<input  type="text" required/></dd>
                 <dd>产品分类：<input  type="text" /></dd>
                 <dd>公司简介：<input  type="text" /></dd>
                 <dd>公司国籍：<input type="text" /></dd>
                 <dd>公司网址：<input type="text" /></dd>
-                <dd><button class="pnSave">保存</button></dd>
+                <dd><button class="mfgSave">保存</button></dd>
             </dl>
         </form>
     </div>
