--- a/src/main/webapp/WEB-INF/static/html/addPn.html
+++ b/src/main/webapp/WEB-INF/static/html/addPn.html
@@ -38,15 +38,15 @@
     <div id="addPn">
         <form id="addForm" action="" method="post" name="addForm">===============添加型号===============
             <dl>
-                <dd>产品种类：<input   type="text" /></dd>
-                <dd>产品型号：<input  type="text" /></dd>
+                <dd>产品种类：<input   type="text" required/></dd>
+                <dd>产品型号：<input  type="text" required/></dd>
                 <dd>产品描述：<input  type="text" /></dd>
-                <dd>品牌名称：<input  type="text" /> <button>查询</button> <button onclick="addMfg()">增加品牌</button> </dd>
+                <dd>品牌名称：<input  type="text" required/> <button>查询</button> <button onclick="addMfg()">增加品牌</button> </dd>
                 <dd>产品封装：<input type="text" /></dd>
                 <dd>包装方式：<input type="text" /></dd>
                 <dd>整包数量：<input  type="text" /></dd>
                 <dd>参考价格：<input  type="text" /></dd>
-                <dd> 规格参数：<input  id="spec"  type="text" /></dd>
+                <dd>规格参数：<input  id="spec"  type="text" /></dd>
                 <dd>上传图片： <input  type="file"  name="upload" id="upload"/></dd>
                 <dd>规格链接： <input   type="text" /></dd>
                 <dd><button class="pnSave">保存</button></dd>
