--- a/src/main/webapp/WEB-INF/static/html/index.html
+++ b/src/main/webapp/WEB-INF/static/html/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>唯群网--首页</title>
-    <link rel="stylesheet" href="/static/css/public.css"  type="text/css"   />
-    <link  href="/static/css/index.css"  type="text/css"  rel="stylesheet"  />
-    <script src="/static/js/jquery-3.2.1.js"></script>
-    <script  type="text/javascript" src="/static/js/public.js"></script>
-    <script  type="text/javascript" src="/static/js/index.js"></script>
+    <link rel="stylesheet" href="css/public.css"  type="text/css"   />
+    <link  href="css/index.css"  type="text/css"  rel="stylesheet"  />
+    <script src="js/jquery-3.2.1.js"></script>
+    <script  type="text/javascript" src="js/public.js"></script>
+
 
 </head>
 
@@ -37,10 +37,17 @@
     </div>
 
 <div id="banner">
-    <div id="img">
-        <img src="/static/images/banner.jpg" alt="">
-    </div>
+    <!--<div id="img">-->
+        <!--<img src="images/banner.jpg" alt="">-->
+    <!--</div>-->
+    <div class="bannerDiv">
 
+        <div class="bannerMiddle bannerImage1">
+            <div class="bannerArrow"><p class="pleft"></p> </div>
+            <div class="bannerArrow" style="float: right;"><p class="pright"></p></div>
+        </div>
+
+    </div>
 </div>
 <div class="box">
     <div id="search">
@@ -125,5 +132,7 @@
         <span>备案号：©唯群网 粤ICP备17005480号-2</span>
     </div>
 </div>
+
+    <script  type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
