--- a/src/main/webapp/WEB-INF/static/html/vendor.html
+++ b/src/main/webapp/WEB-INF/static/html/vendor.html
@@ -49,7 +49,7 @@
                 <li>
                     <span>综合供应</span>
                     <ol>
-                        <li>行业大咖</li>
+                        <li><a href="">行业大咖</a></li>
                         <li>行业平台</li>
                         <li>电商平台</li>
                         <li>电子媒体</li>
