修改了static页面

--- a/src/main/webapp/WEB-INF/static/html/Xservice.html
+++ b/src/main/webapp/WEB-INF/static/html/Xservice.html
@@ -57,31 +57,117 @@
                     <input type="submit" value="提交"/>
                 </th>
                 <tr>
-                    <th>服务编号</th>
+                    <th>编号</th>
                     <th>客户名称</th>
                     <th>服务名称</th>
-                    <th>服务内容</th>
                     <th>起始时间</th>
                     <th>截止时间</th>
                     <th>服务费用</th>
+                    <th>操作</th>
                 </tr>
                 <tr>
                     <td>S001</td>
                     <td>深圳市模板电子科技有限公司</td>
                     <td>金牌会员</td>
-                    <td>询价、报价、热卖库存</td>
                     <td>2019-06-12</td>
                     <td>2020-06-11</td>
                     <td>3800</td>
+                    <td><a href="">删除</a></td>
                 </tr>
                 <tr>
-                    <td>S0012</td>
+                    <td>内容：</td>
+                    <td colspan="6">询价、报价、热卖库存</td>
+                </tr>
+                <tr>
+                    <td>S001</td>
                     <td>深圳市模板电子科技有限公司</td>
-                    <td>大banner广告</td>
-                    <td>在首页发布大版面广告</td>
+                    <td>金牌会员</td>
                     <td>2019-06-12</td>
                     <td>2020-06-11</td>
-                    <td>13800</td>
+                    <td>3800</td>
+                    <td><a href="">删除</a></td>
+                </tr>
+                <tr>
+                    <td>内容：</td>
+                    <td colspan="6">询价、报价、热卖库存</td>
+                </tr>
+                <tr>
+                    <td>S001</td>
+                    <td>深圳市模板电子科技有限公司</td>
+                    <td>金牌会员</td>
+                    <td>2019-06-12</td>
+                    <td>2020-06-11</td>
+                    <td>3800</td>
+                    <td><a href="">删除</a></td>
+                </tr>
+                <tr>
+                    <td>内容：</td>
+                    <td colspan="6">询价、报价、热卖库存</td>
+                </tr>
+                <tr>
+                    <td>S001</td>
+                    <td>深圳市模板电子科技有限公司</td>
+                    <td>金牌会员</td>
+                    <td>2019-06-12</td>
+                    <td>2020-06-11</td>
+                    <td>3800</td>
+                    <td><a href="">删除</a></td>
+                </tr>
+                <tr>
+                    <td>内容：</td>
+                    <td colspan="6">询价、报价、热卖库存</td>
+                </tr>
+                <tr>
+                    <td>S001</td>
+                    <td>深圳市模板电子科技有限公司</td>
+                    <td>金牌会员</td>
+                    <td>2019-06-12</td>
+                    <td>2020-06-11</td>
+                    <td>3800</td>
+                    <td><a href="">删除</a></td>
+                </tr>
+                <tr>
+                    <td>内容：</td>
+                    <td colspan="6">询价、报价、热卖库存</td>
+                </tr>
+                <tr>
+                    <td>S001</td>
+                    <td>深圳市模板电子科技有限公司</td>
+                    <td>金牌会员</td>
+                    <td>2019-06-12</td>
+                    <td>2020-06-11</td>
+                    <td>3800</td>
+                    <td><a href="">删除</a></td>
+                </tr>
+                <tr>
+                    <td>内容：</td>
+                    <td colspan="6">询价、报价、热卖库存</td>
+                </tr>
+                <tr>
+                    <td>S001</td>
+                    <td>深圳市模板电子科技有限公司</td>
+                    <td>金牌会员</td>
+                    <td>2019-06-12</td>
+                    <td>2020-06-11</td>
+                    <td>3800</td>
+                    <td><a href="">删除</a></td>
+                </tr>
+                <tr>
+                    <td>内容：</td>
+                    <td colspan="6">询价、报价、热卖库存</td>
+                </tr>
+                <tr>
+                    <td>S001</td>
+                    <td>深圳市模板电子科技有限公司</td>
+                    <td>金牌会员</td>
+                    <td>2019-06-12</td>
+                    <td>2020-06-11</td>
+                    <td>3800</td>
+                    <td><a href="">删除</a></td>
+                </tr>
+                <tr>
+                    <td>内容：</td>
+                    <td colspan="6">询价、报价、热卖库存</td>
                 </tr>
             </table>
         </form>
