--- a/src/main/webapp/WEB-INF/static/html/Xuser.html
+++ b/src/main/webapp/WEB-INF/static/html/Xuser.html
@@ -12,64 +12,119 @@
 
 <body>
     <div>
-        <form action="toCertify"></form>
-        <table>
-            <tr><th>客户管理</th></tr>
-            <tr>
-                <td><input type="text" placeholder="输入客户名称"/>查询</td>
-            </tr>
-            <tr>
-                <td>客户名称</td>
-                <td>是否通过认证</td>
-                <td>YES</td><td><input type="submit" value="修改"/></td>
-            </tr>
-        </table>
-    </div>
-
-    <div>
-        <table>
-            <tr>
-                <td>服务项目</td>
-                <td>服务内容</td>
-                <td>起始日期</td>
-                <td>结束日期</td>
-                <td>服务费用</td>
-            </tr>
-            <tr>
-                <td>服务项目</td>
-                <td>服务内容</td>
-                <td>起始日期</td>
-                <td>结束日期</td>
-                <td>服务费用</td>
-            </tr>
-
-        </table>
-    </div>
-    <div>
-        <form action="addService">
-            <table>
-                <tr><th>增加服务项目</th></tr>
+        <form id="certify" action="toCertify">
+            <table cellspacing="10px">
+                <tr><th>客户认证</th></tr>
                 <tr>
-                    <td>服务项目名称</td><td><input type="text"/></td>
+                    <td><input type="text" width="150px" placeholder="输入客户名称"/>查询</td>
                 </tr>
                 <tr>
-                    <td>服务内容</td><td><input type="text"/></td>
-                </tr>
-                <tr>
-                    <td>起始日期</td><td><input type="date"/></td>
-                </tr>
-                <tr>
-                    <td>结束日期</td><td><input type="date"/></td>
-                </tr>
-                <tr>
-                    <td>服务费用</td><td><input type="text"/></td>
-                </tr>
-                <tr>
-                    <td><input type="submit" value="提交"/></td>
+                    <td>客户名称</td>
+                    <td>是否通过认证</td>
+                    <td>YES</td><td><input type="submit" value="修改"/></td>
                 </tr>
             </table>
         </form>
     </div>
+
+    <div>
+        <form action="toSearchUser">
+            <div>
+                <input type="text" width="100px" placeholder="客户编号"/><input type="submit" value="查询"/>
+            </div>
+         </form>
+            <table id="user" cellspacing="10px">
+                <tr>
+                    <td>用户编号：</td>
+                    <td><input type="text" value="1001"/></td>
+                </tr>
+                <tr>
+                    <td>用户名：</td>
+                    <td><input type="text" value="卖姑娘的电容"/></td>
+                </tr>
+                <tr>
+                    <td>手机号码：</td>
+                    <td><input type="text" value="13976892368"/></td>
+                </tr>
+                <tr>
+                    <td>密码：</td>
+                    <td><input type="text" value="358576"/></td>
+                </tr>
+                <tr>
+                    <td>公司名称：</td>
+                    <td><input type="text" value="深圳市模板电子科技有限公司"/></td>
+                </tr>
+                <tr>
+                    <td>区域：</td>
+                    <td><input type="text" value="深圳市"/></td>
+                </tr>
+                <tr>
+                    <td>用户类型：</td>
+                    <td><input type="text" value="经销商"/></td>
+                </tr>
+                <tr>
+                    <td>联系人：</td>
+                    <td><input type="text" value="张先生"/></td>
+                </tr>
+                <tr>
+                    <td>职位：</td>
+                    <td><input type="text" value="采购经理"/></td>
+                </tr>
+                <tr>
+                    <td>电话：</td>
+                    <td><input type="text" value="0755-25358576"/></td>
+                </tr>
+                <tr>
+                    <td>QQ号码：</td>
+                    <td><input type="text" value="3585767855"/></td>
+                </tr>
+                <tr>
+                    <td>微信号码：</td>
+                    <td><input type="text" value="sf358576"/></td>
+                </tr>
+                <tr>
+                    <td>爱好：</td>
+                    <td><input type="text" value="打羽毛球，游泳，跑步"/></td>
+                </tr>
+                <tr>
+                    <td>邮箱：</td>
+                    <td><input type="text" value="3585762313@QQ.com"/></td>
+                </tr>
+                <tr>
+                    <td>地址：</td>
+                    <td><input type="text" value="深圳市福田区中航路新亚洲21051"/></td>
+                </tr>
+                <tr>
+                    <td>网址：</td>
+                    <td><input type="text" value="www.asferietrte.com"/></td>
+                </tr>
+                <tr>
+                    <td>主营业务：</td>
+                    <td><textarea name="spec"  cols="100" rows="10">代理分销ST和TI集成电路</textarea></td>
+                </tr>
+                <tr>
+                    <td>公司简介：</td>
+                    <td><textarea name="spec" cols="100" rows="10"></textarea></td>
+                </tr>
+                <tr>
+                    <td>公司商标：</td>
+                    <td><input type="text" value="http://sdaferjfeareteatertwgwrt.com"/></td>
+                </tr>
+                <tr>
+                    <td>宣传图片：</td>
+                    <td><input type="text" value="http://sdaferjfeareteatertwgwrt.com"/></td>
+                </tr>
+                <tr>
+                    <td>营业执照：</td>
+                    <td><input type="text" value="http://sdaferjfeareteatertwgwrt.com"/></td>
+                </tr>
+                <tr>
+                    <td>是否通过认证：</td>
+                    <td><input type="text" value="http://sdaferjfeareteatertwgwrt.com"/></td>
+                </tr>
+            </table>
+    </div>
+
     <div>
         <form action="downloadUser">
             <tr><th>根据地域下载用户列表</th></tr>
@@ -108,4 +163,10 @@
         </form>
     </div>
 </body>
+
+<style>
+  #user input{
+        width: 680px;
+    }
+</style>
 </html>
