--- a/src/main/webapp/WEB-INF/static/html/admin.html
+++ b/src/main/webapp/WEB-INF/static/html/admin.html
@@ -33,9 +33,19 @@
             </ul>
         </div>
         <div id="detail">
-            <iframe src="Xrfq.html" width="100%" height="1000px" frameborder="0"></iframe>
+            <iframe id="analysis" src="Xanalysis.html"></iframe>
+            <iframe id="user" src="Xuser.html"></iframe>
+            <iframe id="pn" src="Xpn.html"></iframe>
+            <iframe id="mfg" src="Xmfg.html"></iframe>
+            <iframe id="bom" src="Xbom.html"></iframe>
+            <iframe id="rfq" src="Xrfq.html"></iframe>
+            <iframe id="quote" src="Xquote.html"></iframe>
+            <iframe id="hotstk" src="Xhotstk.html"></iframe>
+            <iframe id="service" src="Xservice.html"></iframe>
+            <iframe id="aboutus" src="Xaboutus.html"></iframe>
         </div>
     </div>
 </div>
 </body>
+
 </html>
