--- a/src/main/webapp/WEB-INF/static/html/Xanalysis.html
+++ b/src/main/webapp/WEB-INF/static/html/Xanalysis.html
@@ -12,24 +12,97 @@
 
 <body>
     <div>
-        <table>
-            <tr><th>网站基本信息一览表</th></tr>
+        <table cellspacing="15px">
+            <tr><th colspan="6">网站基本信息一览表</th></tr>
             <tr>
-                <td>在线人数</td>
-                <td>最近30天访客数</td>
-                <td>所有历史访客数</td>
-            </tr>
-            <tr>
-                <td>在线人数</td>
-                <td>最近30天访客数</td>
-                <td>所有历史访客数</td>
+                <td>在线人数:</td>
+                <td>100</td>
+                <td>最近30天访客数:</td>
+                <td>1000</td>
+                <td>所有历史访客数:</td>
+                <td>15000</td>
             </tr>
         </table>
     </div>
     <div>
-        <div>
-            <table>
+        <div id="rfqs">
+            <table cellspacing="15px">
                 <tr><th>最近30天询价次数前50名</th></tr>
+                <tr>
+                    <td>STM8S003F3P6</td><td>1586次</td>
+                </tr>
+                <tr>
+                    <td>LM358</td><td>1286次</td>
+                </tr>
+                <tr>
+                    <td>STM32F103C8T6</td><td>1156次</td>
+                </tr>
+                <tr>
+                    <td>TMS320F2812TBFA</td><td>1006次</td>
+                </tr>
+                <tr>
+                    <td>VIPER12</td><td>986次</td>
+                </tr>
+                <tr>
+                    <td>STM8S003F3P6</td><td>1586次</td>
+                </tr>
+                <tr>
+                    <td>LM358</td><td>1286次</td>
+                </tr>
+                <tr>
+                    <td>STM32F103C8T6</td><td>1156次</td>
+                </tr>
+                <tr>
+                    <td>TMS320F2812TBFA</td><td>1006次</td>
+                </tr>
+                <tr>
+                    <td>VIPER12</td><td>986次</td>
+                </tr>
+                <tr>
+                    <td>STM8S003F3P6</td><td>1586次</td>
+                </tr>
+                <tr>
+                    <td>LM358</td><td>1286次</td>
+                </tr>
+                <tr>
+                    <td>STM32F103C8T6</td><td>1156次</td>
+                </tr>
+                <tr>
+                    <td>TMS320F2812TBFA</td><td>1006次</td>
+                </tr>
+                <tr>
+                    <td>VIPER12</td><td>986次</td>
+                </tr>
+                <tr>
+                    <td>STM8S003F3P6</td><td>1586次</td>
+                </tr>
+                <tr>
+                    <td>LM358</td><td>1286次</td>
+                </tr>
+                <tr>
+                    <td>STM32F103C8T6</td><td>1156次</td>
+                </tr>
+                <tr>
+                    <td>TMS320F2812TBFA</td><td>1006次</td>
+                </tr>
+                <tr>
+                    <td>VIPER12</td><td>986次</td>
+                </tr>
+                <tr>
+                    <td>STM8S003F3P6</td><td>1586次</td>
+                </tr>
+                <tr>
+                    <td>LM358</td><td>1286次</td>
+                </tr>
+                <tr>
+                    <td>STM32F103C8T6</td><td>1156次</td>
+                </tr>
+                <tr>
+                    <td>TMS320F2812TBFA</td><td>1006次</td>
+                </tr>
+                <tr>
+                    <td>VIPER12</td><td>986次</td>
+                </tr>
                 <tr>
                     <td>STM8S003F3P6</td><td>1586次</td>
                 </tr>
@@ -47,9 +120,84 @@
                 </tr>
             </table>
         </div>
-        <div>
-            <table>
+        <div id="finds">
+            <table cellspacing="15px">
                 <tr><th>最近30天查询次数前50名</th></tr>
+                <tr>
+                    <td>STM8S003F3P6</td><td>3586次</td>
+                </tr>
+                <tr>
+                    <td>LM358</td><td>2286次</td>
+                </tr>
+                <tr>
+                    <td>STM32F103C8T6</td><td>1856次</td>
+                </tr>
+                <tr>
+                    <td>TMS320F2812TBFA</td><td>1506次</td>
+                </tr>
+                <tr>
+                    <td>VIPER12</td><td>1286次</td>
+                </tr>
+                <tr>
+                    <td>STM8S003F3P6</td><td>3586次</td>
+                </tr>
+                <tr>
+                    <td>LM358</td><td>2286次</td>
+                </tr>
+                <tr>
+                    <td>STM32F103C8T6</td><td>1856次</td>
+                </tr>
+                <tr>
+                    <td>TMS320F2812TBFA</td><td>1506次</td>
+                </tr>
+                <tr>
+                    <td>VIPER12</td><td>1286次</td>
+                </tr>
+                <tr>
+                    <td>STM8S003F3P6</td><td>3586次</td>
+                </tr>
+                <tr>
+                    <td>LM358</td><td>2286次</td>
+                </tr>
+                <tr>
+                    <td>STM32F103C8T6</td><td>1856次</td>
+                </tr>
+                <tr>
+                    <td>TMS320F2812TBFA</td><td>1506次</td>
+                </tr>
+                <tr>
+                    <td>VIPER12</td><td>1286次</td>
+                </tr>
+                <tr>
+                    <td>STM8S003F3P6</td><td>3586次</td>
+                </tr>
+                <tr>
+                    <td>LM358</td><td>2286次</td>
+                </tr>
+                <tr>
+                    <td>STM32F103C8T6</td><td>1856次</td>
+                </tr>
+                <tr>
+                    <td>TMS320F2812TBFA</td><td>1506次</td>
+                </tr>
+                <tr>
+                    <td>VIPER12</td><td>1286次</td>
+                </tr>
+                <tr>
+                    <td>STM8S003F3P6</td><td>3586次</td>
+                </tr>
+                <tr>
+                    <td>LM358</td><td>2286次</td>
+                </tr>
+                <tr>
+                    <td>STM32F103C8T6</td><td>1856次</td>
+                </tr>
+                <tr>
+                    <td>TMS320F2812TBFA</td><td>1506次</td>
+                </tr>
+                <tr>
+                    <td>VIPER12</td><td>1286次</td>
+                </tr>
                 <tr>
                     <td>STM8S003F3P6</td><td>3586次</td>
                 </tr>
@@ -67,7 +215,16 @@
                 </tr>
             </table>
         </div>
-
     </div>
 </body>
+
+<style>
+    #rfqs{
+        float: left;
+    }
+    #finds{
+        float: left;
+        margin-left: 50px;
+    }
+</style>
 </html>
